reduce class sizes (mainly GameController & GameEngine)